{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 207,
  "lineage": "7a093053-eb9e-8789-c432-06439988671f",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-net-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/networkInterfaces/web-network",
            "internal_domain_name_suffix": "4xanrrb5zj3ujcwacikos5yycg.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-webserver",
                "primary": true,
                "private_ip_address": "192.168.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-E8-41-21",
            "name": "web-network",
            "private_ip_address": "192.168.1.5",
            "private_ip_addresses": [
              "192.168.1.5"
            ],
            "resource_group_name": "azure-stack",
            "virtual_machine_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Compute/virtualMachines/web-vm"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-net-interface2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/networkInterfaces/web-network2",
            "internal_domain_name_suffix": "4xanrrb5zj3ujcwacikos5yycg.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-webserver2",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AF-08-BF",
            "name": "web-network2",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "azure-stack",
            "virtual_machine_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Compute/virtualMachines/web-vm2"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "appbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/frontendIPConfigurations/frontend-ip",
                "load_balancer_rules": [
                  "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/loadBalancingRules/RuleA"
                ],
                "name": "frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/publicIPAddresses/load-ip"
              }
            ],
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer",
            "location": "centralindia",
            "name": "app-balancer",
            "resource_group_name": "azure-stack",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_public_ip.loadip",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "poolA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/backendAddressPools/PoolA",
            "load_balancing_rules": [
              "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/loadBalancingRules/RuleA"
            ],
            "loadbalancer_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer",
            "name": "PoolA"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.appbalancer",
            "module.loadbalancer.azurerm_public_ip.loadip",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "appvmaddress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/backendAddressPools/PoolA",
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/backendAddressPools/PoolA/addresses/web-vm",
            "ip_address": "192.168.1.5",
            "name": "web-vm",
            "virtual_network_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01"
          },
          "dependencies": [
            "module.compute.azurerm_network_interface.web-net-interface",
            "module.loadbalancer.azurerm_lb.appbalancer",
            "module.loadbalancer.azurerm_lb_backend_address_pool.poolA",
            "module.loadbalancer.azurerm_public_ip.loadip",
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "appvmaddress2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/backendAddressPools/PoolA",
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/backendAddressPools/PoolA/addresses/web-vm2",
            "ip_address": "192.168.1.4",
            "name": "web-vm2",
            "virtual_network_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01"
          },
          "dependencies": [
            "module.compute.azurerm_network_interface.web-net-interface2",
            "module.loadbalancer.azurerm_lb.appbalancer",
            "module.loadbalancer.azurerm_lb_backend_address_pool.poolA",
            "module.loadbalancer.azurerm_public_ip.loadip",
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probeA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/probes/probeA",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/loadBalancingRules/RuleA"
            ],
            "loadbalancer_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer",
            "name": "probeA",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.appbalancer",
            "module.loadbalancer.azurerm_public_ip.loadip",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "RuleA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/backendAddressPools/PoolA"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/frontendIPConfigurations/frontend-ip",
            "frontend_ip_configuration_name": "frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/loadBalancingRules/RuleA",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer",
            "name": "RuleA",
            "probe_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/loadBalancers/app-balancer/probes/probeA",
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.appbalancer",
            "module.loadbalancer.azurerm_lb_backend_address_pool.poolA",
            "module.loadbalancer.azurerm_lb_probe.probeA",
            "module.loadbalancer.azurerm_public_ip.loadip",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "loadip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/publicIPAddresses/load-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.204.127.66",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "load-ip",
            "resource_group_name": "azure-stack",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-stack",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-stack",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-stack",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c4d8c0f5-ca3f-447b-8ac0-1214e97f1816",
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01",
            "location": "centralindia",
            "name": "vnet01",
            "resource_group_name": "azure-stack",
            "subnet": [
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
                "name": "web-subnet",
                "security_group": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/web-nsg"
              },
              {
                "address_prefix": "192.168.2.0/24",
                "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
                "name": "app-subnet",
                "security_group": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/app-nsg"
              },
              {
                "address_prefix": "192.168.3.0/24",
                "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
                "name": "db-subnet",
                "security_group": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/db-nsg"
              }
            ]
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "centralindia",
            "name": "app-nsg",
            "resource_group_name": "azure-stack",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "centralindia",
            "name": "db-nsg",
            "resource_group_name": "azure-stack",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-3",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "centralindia",
            "name": "web-nsg",
            "resource_group_name": "azure-stack",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-2",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.app-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs",
            "module.securitygroup.azurerm_network_security_group.app-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.db-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs",
            "module.securitygroup.azurerm_network_security_group.db-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/3605a014-27e9-4034-ab43-f432c7d3efde/resourceGroups/azure-stack/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs",
            "module.securitygroup.azurerm_network_security_group.web-nsg"
          ]
        }
      ]
    }
  ]
}